# aio

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  RULES  TODO.md  main.js  package-lock.json  package.json  preload.js  tmp-electron-check.js
agents/: agent_skill_decider_agent.yaml  agent_skill_reviewer_agent.yaml  agents_registry.yaml  language_bridge_agent.yaml  language_fit_selector_agent.yaml  lifecycle_hook_split_agent.yaml  literal_factory_agent.yaml  naming_governor_agent.yaml  polyglot_default_director_agent.yaml  polyglot_quality_benchmark_agent.yaml  pseudo_blueprint_planner_agent.yaml  pseudocode_polyglot_translator_agent.yaml  renderer_modular_refactor_agent.yaml
app/: index.html  logs.html  logs.js  renderer.js  styles.css
brain/: README.md
data/: README.md
docs/: README.md  api-surface-reference.md  architecture-map.md  feature-catalog.md  inventory.index.json  inventory.schema.json  operations-runbook.md  (+2 more)
native/dx12/: CMakeLists.txt  README.md
native/dx12/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
native/dx12/build-ninja/: CMakeCache.txt
native/dx12/include/dx12/: AssetHotReload.h  CommandRecording.h  Common.h  DescriptorAllocator.h  Dx12Renderer.h  FrameGraph.h  GpuMemoryAllocator.h  PipelineCache.h  RenderTypes.h  ResourceLifetimeTracker.h  ShaderBindingSystem.h
native/dx12/src/: AssetHotReload.cpp  CommandRecording.cpp  DescriptorAllocator.cpp  Dx12Renderer.cpp  FrameGraph.cpp  GpuMemoryAllocator.cpp  PipelineCache.cpp  ResourceLifetimeTracker.cpp  ShaderBindingSystem.cpp
(+871 files in other folders)
